@@ -23,6 +23,13 @@ LABEL maintainer="Jean-Christophe Malapert <jean-christophe.malapert@cnes.fr>"
 ARG BUILD_DATE
 ARG VCS_REF
 ARG VERSION
+ARG SMTP_HOST
+ARG SMTP_PORT
+ARG SMTP_LOGIN
+ARG SMTP_PASSWD
+ARG SLACK_TOKEN
+ARG SLACK_CHANNEL_ID
+ARG OTEL_EXPORTER_OTLP_ENDPOINT
 
 ARG DEBIAN_FRONTEND=noninteractive
 
