@@ -1,4 +1,14 @@
-### Update README (HEAD -> main)
+### Pass arguments to dockerfile clening (HEAD -> main)
+>Thu, 13 Jun 2024 17:16:01 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Update README (origin/dashboard-patch-1, dashboard-patch-1)
 >Thu, 13 Jun 2024 01:55:53 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
